data/derived/fa15/progs/unify/prog0739.ml.out
Characters 271-275:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type int list
